--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,30 +4,46 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
-
+    container:
+      image: archlinux:latest
     steps:
-    - name: arm-none-eabi-gcc
-      uses: carlosperate/arm-none-eabi-gcc-action@v1
-      with:
-        release: '10.3-2021.10'
+      - name: base-devel
+        run:  pacman -Syyu base-devel --noconfirm
+      - name: arm-none-eabi-gcc
+        run:  pacman -Syyu arm-none-eabi-gcc --noconfirm
+      - name: arm-none-eabi-newlib
+        run:  pacman -Syyu arm-none-eabi-newlib --noconfirm
+      - name: git
+        run:  pacman -Syyu git --noconfirm
+      - name: python-pip
+        run:  pacman -Syyu python-pip --noconfirm
+      - name: python-crcmod
+        run:  pacman -Syyu python-crcmod --noconfirm      
 
-    - name: Install Python dependencies
-      run: python -m pip install --upgrade pip crcmod
+      - name: Checkout
+        uses: actions/checkout@v3
+        
+      - name: safe.directory
+        run:  git config --global --add safe.directory /__w/uv-k5-firmware-custom/uv-k5-firmware-custom        
+      - name: Make
+        run:  make
+      - name: size
+        run:  arm-none-eabi-size firmware
 
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v3
+        with:
+          name: firmware
+          path: firmware*.bin
 
-    - name: Submodules
-      run: git submodule update --init --recursive --depth 1
-
-    - name: Make
-      run:  make
-
-    - name: size
-      run:  arm-none-eabi-size firmware
-
-    - name: 'Upload Artifact'
-      uses: actions/upload-artifact@v3
-      with:
-        name: firmware
-        path: firmware*.bin
+      - name: Upload binaries to release
+        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: firmware.packed.bin
+          asset_name: egzumer_$tag.packed.bin
+          tag: ${{ github.ref }}
+          overwrite: true
+          release_name: release ${{ github.ref_name }}     
+   
